k8s/todoapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapi
spec:
  rules:
    - host: todo.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapi
                port:
                  number: 80
